--- a/src/NuGet.Clients/PackageManagement.UI/Xamls/ProjectView.xaml
+++ b/src/NuGet.Clients/PackageManagement.UI/Xamls/ProjectView.xaml
@@ -78,7 +78,7 @@
       MinHeight="24"
       AutomationProperties.AutomationId="Project_Button_Uninstall"
       HorizontalAlignment="Left"
-      Visibility="{Binding InstalledVersion, Converter={StaticResource NullToVisibilityConverter}, Mode=OneWay}"
+      IsEnabled="{Binding SelectedVersion.AutoReferenced,Converter={StaticResource NotNullOrTrueToBooleanConverter}}"
       Click="UninstallButton_Clicked"
       Content="{x:Static local:Resources.Button_Uninstall}" />
 
