By default opted out to show package format selection dialog

--- a/src/NuGet.Clients/PackageManagement.UI/Xamls/PackageManagementFormatWindow.xaml
+++ b/src/NuGet.Clients/PackageManagement.UI/Xamls/PackageManagementFormatWindow.xaml
@@ -106,7 +106,7 @@
       Margin="12,8,12,0"
       Foreground="{DynamicResource {x:Static nuget:Brushes.UIText}}"
       Content="{x:Static nuget:Resources.CheckBox_DefaultPackageFormat}"
-      IsChecked="{Binding Path=IsDisabled }" />
+      IsChecked="{Binding Path=Enabled }" />
 
     <Grid
       Grid.Row="6"
